; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/netapi32/extr_nbnamecache.c_NBNameCacheWalk.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/netapi32/extr_nbnamecache.c_NBNameCacheWalk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, %struct.TYPE_6__*, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }
%struct.NBNameCache = type { %struct.TYPE_6__* }

@NCBNAMSZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_6__** (%struct.NBNameCache*, i8*)* @NBNameCacheWalk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_6__** @NBNameCacheWalk(%struct.NBNameCache* %0, i8* %1) #0 {
  %3 = alloca %struct.NBNameCache*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_6__**, align 8
  %6 = alloca %struct.TYPE_6__**, align 8
  store %struct.NBNameCache* %0, %struct.NBNameCache** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i64, i64* @NCBNAMSZ, align 8
  store %struct.TYPE_6__** null, %struct.TYPE_6__*** %5, align 8
  %8 = load %struct.NBNameCache*, %struct.NBNameCache** %3, align 8
  %9 = icmp ne %struct.NBNameCache* %8, null
  br i1 %9, label %10, label %69

10:                                               ; preds = %2
  %11 = load %struct.NBNameCache*, %struct.NBNameCache** %3, align 8
  %12 = getelementptr inbounds %struct.NBNameCache, %struct.NBNameCache* %11, i32 0, i32 0
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %14 = icmp ne %struct.TYPE_6__* %13, null
  br i1 %14, label %15, label %69

15:                                               ; preds = %10
  %16 = load %struct.NBNameCache*, %struct.NBNameCache** %3, align 8
  %17 = getelementptr inbounds %struct.NBNameCache, %struct.NBNameCache* %16, i32 0, i32 0
  store %struct.TYPE_6__** %17, %struct.TYPE_6__*** %6, align 8
  br label %18

18:                                               ; preds = %67, %15
  %19 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %20 = icmp ne %struct.TYPE_6__** %19, null
  br i1 %20, label %21, label %31

21:                                               ; preds = %18
  %22 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %22, align 8
  %24 = icmp ne %struct.TYPE_6__* %23, null
  br i1 %24, label %25, label %31

25:                                               ; preds = %21
  %26 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 2
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %28, align 8
  %30 = icmp ne %struct.TYPE_5__* %29, null
  br label %31

31:                                               ; preds = %25, %21, %18
  %32 = phi i1 [ false, %21 ], [ false, %18 ], [ %30, %25 ]
  br i1 %32, label %33, label %68

33:                                               ; preds = %31
  %34 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 2
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i8*, i8** %4, align 8
  %41 = load i64, i64* @NCBNAMSZ, align 8
  %42 = sub nsw i64 %41, 1
  %43 = call i32 @memcmp(i32 %39, i8* %40, i64 %42)
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %47, label %45

45:                                               ; preds = %33
  %46 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  store %struct.TYPE_6__** %46, %struct.TYPE_6__*** %5, align 8
  br label %59

47:                                               ; preds = %33
  %48 = call i64 (...) @GetTickCount()
  %49 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 0
  %52 = load i64, i64* %51, align 8
  %53 = icmp sgt i64 %48, %52
  br i1 %53, label %54, label %58

54:                                               ; preds = %47
  %55 = load %struct.NBNameCache*, %struct.NBNameCache** %3, align 8
  %56 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %57 = call i32 @NBNameCacheUnlinkNode(%struct.NBNameCache* %55, %struct.TYPE_6__** %56)
  br label %58

58:                                               ; preds = %54, %47
  br label %59

59:                                               ; preds = %58, %45
  %60 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %61 = load %struct.TYPE_6__*, %struct.TYPE_6__** %60, align 8
  %62 = icmp ne %struct.TYPE_6__* %61, null
  br i1 %62, label %63, label %67

63:                                               ; preds = %59
  %64 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %64, align 8
  %66 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %65, i32 0, i32 1
  store %struct.TYPE_6__** %66, %struct.TYPE_6__*** %6, align 8
  br label %67

67:                                               ; preds = %63, %59
  br label %18

68:                                               ; preds = %31
  br label %69

69:                                               ; preds = %68, %10, %2
  %70 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  ret %struct.TYPE_6__** %70
}

declare dso_local i32 @memcmp(i32, i8*, i64) #1

declare dso_local i64 @GetTickCount(...) #1

declare dso_local i32 @NBNameCacheUnlinkNode(%struct.NBNameCache*, %struct.TYPE_6__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
